Bugs fixed in 0.1.90
* Bug #23: fixed wrong assembly in elemOper.cpp in stiff_sd (MP)

New in 0.1.90:
* Task #xx completed (LF & CP)
* Task #xx added preliminary mass transport support (MP)
* added area debugging see LDebug class (CP)
* added a petsc interface in lifealfg, see SolverPETSC class (CP)
* chenged interface to vecUnknown classes: no need to use .vec() anymore
  fixed speed issues at the same time (CP)
* updated libtool scripts (CP)
* added configure check for parmetis (at least 3.1) (CP)
* added configure check for petsc (at least 2.1.6) (CP)
* added configure check for umfpack (at least 4.3) (CP)
* added configure check for mpi (CP)


Bugs fixed in 0.1.0pre5:
* Bug #2 : documentation update to lifev-dev manual
* Bug #17: fixed segfault in medium size NavierStokes problem
* Bug #20: fixed data files in testsuite to reflect the tests location

New in 0.1.0pre5:
* added --enable-debug and --enable-opt to configure script
* LifeV is finally copyrighted properly
* LifeV libraries are now LGPL. Header and implementation have 
  been updated accordingly.
* LifeV testsuite is now GPL. Header and implementation have 
  been updated accordingly.


Bugs fixed in 0.1.0pre4:
* Bug #8 : wrong (?) assert in regionMesh3D.hpp
* Bug #9 : updateElementFaces(true) requires updateElementEdges() first.
* Bug #15: data directory in testsuite

New in 0.1.0pre4:
* 'make distcheck' works from start to finish properly
* lifev compiles entirely included all testsuite tests
* removed entirely testsuite/development: either created a proper 
  testsuite/test_{} test or moved the test to the lifev-sandbox
* added lifecore/testsuite for small tests programs related to lifecore
* life libraries should be std:: clean. no more using namespace std::
  it is a very bad programming pratice in the long run
* use Quality Management Test tool qmtest for the testsuite
* moved testsuite/official/* and testsuite/development/* in testsuite


New in 0.1.0pre3: